# xterm-unit-test

./: .gitignore  CMakeLists.txt  README.md  run_test_suite.sh
tests/: test_initializer.py  test_simple_text.py
xterm/: CMakeLists.txt  test_xterm_main.c
xut/: __init__.py
